--- a/app/layouts/default.jade
+++ b/app/layouts/default.jade
@@ -10,6 +10,7 @@ html.no-js
 
     // build:css styles/vendor.css
     // bower:css
+    link(rel='stylesheet' href='../vendor/css/animations.css')
     // endbower
     // endbuild
 
