--- a/app/includes/pages/navigation.jade
+++ b/app/includes/pages/navigation.jade
@@ -3,7 +3,7 @@ header.page_header.header_white.floating_logo.columns_padding_0.table_section
     .row
       .col-md-3.col-xs-4
         a.logo.logo_image(href='index.html')
-          img(src='images/logo2.png', alt='EN-SALE')
+          img(src='images/logo.png', alt='EN-SALE')
         span.logo-meta
           strong.grey +7(999)999-999
           br
