--- a/app/includes/pages/slider.jade
+++ b/app/includes/pages/slider.jade
@@ -9,7 +9,7 @@ section.intro_section.page_mainslider.ds
               .slide_description_wrapper
                 .top-corner
                   a.logo(href='index.html')
-                    img(src='images/logo2.png', alt='EN-SALE')
+                    img(src='images/logo.png', alt='EN-SALE')
                   .top-corner__text
                     span.grey Чистая Энергия для Чистой
                     span.highlight  Планеты
