--- a/app/includes/pages/callus.jade
+++ b/app/includes/pages/callus.jade
@@ -6,6 +6,6 @@ section.ds.ms.section_padding_top_50.section_padding_bottom_50
           | Хотите нам позвонить?
         h2.section_header.highlight
           | Заполните форму, чтобы заказать звонок
-      .col-md-4.col-md-push-4.col-sm-6.col-sm-push-3
+      .col-md-4.col-md-push-4.col-sm-6.col-sm-push-3.text-center
         .widget.widget_mailchimp
           a.theme_button.color1 Заказать Звонок
