--- a/app/includes/pages/services.jade
+++ b/app/includes/pages/services.jade
@@ -1,146 +1,30 @@
+include ../mixins/mixins.jade
 section.ls.ms.section_padding_top_50.section_padding_bottom_50
   .container
     .row
       .col-sm-9
         .row.columns_padding_2
-          .col-md-3.col-sm-6
-            .vertical-item.content-absolute.square_teaser
-              .item-media
-                img(src='images/events/01.jpg', alt='')
-              .item-content
-                h4
-                  | Солнечные панели
-                .teaser_icon.size_small.item-content__hide
-                  a.item-content__button Перейти
-          .col-md-3.col-sm-6
-            .vertical-item.content-absolute.square_teaser
-              .item-media
-                img(src='images/events/02.jpg', alt='')
-              .item-content
-                h4
-                  | Контроллеры
-                .teaser_icon.size_small.item-content__hide
-                  a.item-content__button Перейти
-          .col-md-3.col-sm-6
-            .vertical-item.content-absolute.square_teaser
-              .item-media
-                img(src='images/events/03.jpg', alt='')
-              .item-content
-                h4
-                  | Инверторы
-                .teaser_icon.size_small.item-content__hide
-                  a.item-content__button Перейти
-          .col-md-3.col-sm-6
-            .vertical-item.content-absolute.square_teaser
-              .item-media
-                img(src='images/events/04.jpg', alt='')
-              .item-content
-                h4
-                  | АКБ
-                .teaser_icon.size_small.item-content__hide
-                  a.item-content__button Перейти
-          .col-md-3.col-sm-6
-            .vertical-item.content-absolute.square_teaser
-              .item-media
-                img(src='images/events/05.jpg', alt='')
-              .item-content
-                h4
-                  | Ветрогенераторы
-                .teaser_icon.size_small.item-content__hide
-                  a.item-content__button Перейти
-          .col-md-3.col-sm-6
-            .vertical-item.content-absolute.square_teaser
-              .item-media
-                img(src='images/events/06.jpg', alt='')
-              .item-content
-                h4
-                  | ИБП
-                .teaser_icon.size_small.item-content__hide
-                  a.item-content__button Перейти
-          .col-md-3.col-sm-6
-            .vertical-item.content-absolute.square_teaser
-              .item-media
-                img(src='images/events/07.jpg', alt='')
-              .item-content
-                h4
-                  | Комплектующие
-                .teaser_icon.size_small.item-content__hide
-                  a.item-content__button Перейти
-          .col-md-3.col-sm-6
-            .vertical-item.content-absolute.square_teaser
-              .item-media
-                img(src='images/events/08.jpg', alt='')
-              .item-content
-                h4
-                  | Солнечные коллекторы
-                .teaser_icon.size_small.item-content__hide
-                  a.item-content__button Перейти
-          .col-md-3.col-sm-6
-            .vertical-item.content-absolute.square_teaser
-              .item-media
-                img(src='images/events/05.jpg', alt='')
-              .item-content
-                h4
-                  | Офисное и бытовое освещение
-                .teaser_icon.size_small.item-content__hide
-                  a.item-content__button Перейти
-          .col-md-3.col-sm-6
-            .vertical-item.content-absolute.square_teaser
-              .item-media
-                img(src='images/events/06.jpg', alt='')
-              .item-content
-                h4
-                  | Промышленное освещение
-                .teaser_icon.size_small.item-content__hide
-                  a.item-content__button Перейти
-          .col-md-3.col-sm-6
-            .vertical-item.content-absolute.square_teaser
-              .item-media
-                img(src='images/events/07.jpg', alt='')
-              .item-content
-                h4
-                  | Уличное освещение
-                .teaser_icon.size_small.item-content__hide
-                  a.item-content__button Перейти
-          .col-md-3.col-sm-6
-            .vertical-item.content-absolute.square_teaser
-              .item-media
-                img(src='images/events/08.jpg', alt='')
-              .item-content
-                h4
-                  | Низкоыольтное оборудование
-                .teaser_icon.size_small.item-content__hide
-                  a.item-content__button Перейти
+          +services-item('images/events/01.jpg', '', 'Солнечные панели', 'Перейти')
+          +services-item('images/events/02.jpg', '', 'Контроллеры', 'Перейти')
+          +services-item('images/events/03.jpg', '', 'Инверторы', 'Перейти')
+          +services-item('images/events/04.jpg', '', 'АКБ', 'Перейти')
+
+          +services-item('images/events/05.jpg', '', 'Ветрогенераторы', 'Перейти')
+          +services-item('images/events/06.jpg', '', 'ИБП', 'Перейти')
+          +services-item('images/events/07.jpg', '', 'Комплектующие', 'Перейти')
+          +services-item('images/events/08.jpg', '', 'Солнечные коллекторы', 'Перейти')
+
+          +services-item('images/events/05.jpg', '', 'Офисное и бытовое освещение', 'Перейти')
+          +services-item('images/events/06.jpg', '', 'Промышленное освещение', 'Перейти')
+          +services-item('images/events/07.jpg', '', 'Уличное освещение', 'Перейти')
+          +services-item('images/events/08.jpg', '', 'Низковольтное оборудование', 'Перейти')
+
       .col-sm-3
         .with_background.with_padding
           .widget.widget_popular_entries
             h3.widget-title Хиты продаж
             ul.media-list.darklinks
-              li.media
-                a.media-left(href='blog-single-right.html')
-                  img.media-object(src='images/recent_post1.jpg', alt='')
-                .media-body
-                  p
-                    a(href='blog-single-right.html') Солнечная панель
-                  span 2 400 руб.
-              li.media
-                a.media-left(href='blog-single-right.html')
-                  img.media-object(src='images/recent_post2.jpg', alt='')
-                .media-body
-                  p
-                    a(href='blog-single-right.html') Аккамулятор
-                  span 2 800 руб.
-              li.media
-                a.media-left(href='blog-single-right.html')
-                  img.media-object(src='images/recent_post1.jpg', alt='')
-                .media-body
-                  p
-                    a(href='blog-single-right.html') Ветрогенератор
-                  span 2 000 руб.
-              li.media
-                a.media-left(href='blog-single-right.html')
-                  img.media-object(src='images/recent_post2.jpg', alt='')
-                .media-body
-                  p
-                    a(href='blog-single-right.html') Контроллер
-                  span 1 400 руб.
+              +news-item('blog-single-right.html', 'images/recent_post1.jpg', 'blog-single-right.html', 'Солнечная панель', '2 400 руб.')
+              +news-item('blog-single-right.html', 'images/recent_post2.jpg', 'blog-single-right.html', 'Аккамулятор', '2 800 руб.')
+              +news-item('blog-single-right.html', 'images/recent_post1.jpg', 'blog-single-right.html', 'Ветрогенератор', '1 400 руб.')
+              +news-item('blog-single-right.html', 'images/recent_post2.jpg', 'blog-single-right.html', 'Контроллер', '5 450 руб.')
