--- a/app/layouts/default.jade
+++ b/app/layouts/default.jade
@@ -10,7 +10,7 @@ html.no-js
 
     // build:css styles/vendor.css
     // bower:css
-    link(rel='stylesheet' href='../vendor/css/animations.css')
+    link(rel='stylesheet' href='styles/animations.css')
     // endbower
     // endbuild
 
@@ -61,5 +61,6 @@ html.no-js
 
     // build:js scripts/main.js
     script(src='scripts/main.js')
+    script(src='scripts/compressed.js')
     // endbuild
 
