--- a/app/styles/includes/btns.scss
+++ b/app/styles/includes/btns.scss
@@ -22,6 +22,7 @@
   -o-transition: all 0.4s linear 0s;
   -ms-transition: all 0.4s linear 0s;
   transition: all 0.4s linear 0s;
+  border-radius: 5px;
 }
 
 .color1 {
