--- a/app/styles/includes/page-preloader.scss
+++ b/app/styles/includes/page-preloader.scss
@@ -17,6 +17,6 @@
   position: absolute;
   left: 50%;
   top: 50%;
-  background: url(../img/preloader.gif) no-repeat 50% 50% transparent;
+  background: url(../images/img/preloader.gif) no-repeat 50% 50% transparent;
   margin: -50px 0 0 -50px;
 }
