add class item-media_radous

--- a/app/includes/mixins/mixins.jade
+++ b/app/includes/mixins/mixins.jade
@@ -19,7 +19,7 @@ mixin galary-item(imgSrc, linkHref)
 mixin services-item(imgSrc, imgAlt, title, linkText)
   .col-md-3.col-sm-6
     .vertical-item.content-absolute.square_teaser
-      .item-media
+      .item-media.item-media_radius
         img(src=imgSrc, alt=imgAlt)
       .item-content
         h4=title
