--- a/app/styles/includes/teasers.scss
+++ b/app/styles/includes/teasers.scss
@@ -267,7 +267,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(50, 50, 50, 0.8);
+    background-color: rgba(50, 50, 50, 0.4);
   }
   .item-content {
     top: 0;
@@ -289,7 +289,7 @@
   }
   h4 {
     color: #ffffff;
-    font-size: 28px;
+    font-size: 18px;
     font-weight: 700;
   }
   p {
@@ -298,13 +298,13 @@
   }
   &:hover {
     h4, .teaser_icon {
-      color: #323232;
+      color: #f5bb2c;
     }
     p {
       opacity: 1;
     }
     .item-media:after {
-      background-color: #f5bb2c;
+      background-color: rgba(50, 50, 50, 0.8);
     }
   }
 }
