--- a/app/includes/pages/services.jade
+++ b/app/includes/pages/services.jade
@@ -2,7 +2,7 @@ include ../mixins/mixins.jade
 section.ls.ms.section_padding_top_50.section_padding_bottom_50
   .container
     .row
-      .col-sm-9
+      .col-md-9.col-sm-8
         .row.columns_padding_2
           +services-item('images/events/01.jpg', '', 'Солнечные панели', 'Перейти')
           +services-item('images/events/02.jpg', '', 'Контроллеры', 'Перейти')
@@ -19,8 +19,8 @@ section.ls.ms.section_padding_top_50.section_padding_bottom_50
           +services-item('images/events/07.jpg', '', 'Уличное освещение', 'Перейти')
           +services-item('images/events/08.jpg', '', 'Низковольтное оборудование', 'Перейти')
 
-      .col-sm-3
-        .with_background.with_padding
+      .col-md-3.col-sm-4
+        .with_background.with_padding.with_radius
           .widget.widget_popular_entries
             h3.widget-title Хиты продаж
             ul.media-list.darklinks
