--- a/app/styles/includes/grey-section.scss
+++ b/app/styles/includes/grey-section.scss
@@ -8,6 +8,9 @@
   .with_background, hr {
     background-color: #ffffff;
   }
+  .with_radius {
+    border-radius: 18px;
+  }
   .form-control {
     border-color: transparent;
     background-color: #ffffff;
