--- a/app/styles/includes/teasers.scss
+++ b/app/styles/includes/teasers.scss
@@ -290,12 +290,23 @@
   h4 {
     color: #ffffff;
     font-size: 18px;
-    font-weight: 700;
+    font-weight: 400;
+    text-align: center;
   }
   p {
     color: #ffffff;
     opacity: 0;
   }
+
+  .item-content__link {
+    text-align: center;
+    opacity: 0;
+    position: absolute;
+    top: 100px;
+    left: 32%;
+    font-size: 20px;
+  }
+
   &:hover {
     h4, .teaser_icon {
       color: #f5bb2c;
@@ -303,8 +314,15 @@
     p {
       opacity: 1;
     }
+    .item-content__link {
+      opacity: 1;
+    }
     .item-media:after {
       background-color: rgba(50, 50, 50, 0.8);
     }
+  }
+
+  .services-link:hover {
+    color: #f5bb2c;
   }
 }
