add item , header and product edit style

--- a/app/includes/components/tab.jade
+++ b/app/includes/components/tab.jade
@@ -11,38 +11,38 @@ ul.nav.nav-tabs(role='tablist')
 .tab-content.no-border.top-color-border
   #tab1.tab-pane.fade.in.active
     .row.columns_padding_2
-      .col-md-4.col-sm-6
-        +tab-item1('images/events/01.jpg', 'Сервис', 'Здесь.')
-      .col-md-4.col-sm-6
-        +tab-item1('images/events/01.jpg', 'Сервис', 'Здесь.')
-      .col-md-4.col-sm-6
-        +tab-item1('images/events/01.jpg', 'Сервис', 'Здесь.')
-      .col-md-4.col-sm-6
-        +tab-item1('images/events/01.jpg', 'Сервис', 'Здесь.')
-      .col-md-4.col-sm-6
-        +tab-item1('images/events/01.jpg', 'Сервис', 'Здесь.')
-      .col-md-4.col-sm-6
-        +tab-item1('images/events/01.jpg', 'Сервис', 'Здесь.')
+      .col-md-3.col-sm-6
+        +tab-item1('images/gallery/01.jpg', 'Солнечные батареи ФСМ-100М 100 ватт 12В Mono', 'Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+      .col-md-3.col-sm-6
+        +tab-item1('images/gallery/02.jpg', 'Мобильный солнечный модуль Sunways FSM-3М', 'Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+      .col-md-3.col-sm-6
+        +tab-item1('images/gallery/03.jpg', 'Мобильный солнечный модуль Sunways FSM-100М', 'Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+      .col-md-3.col-sm-6
+        +tab-item1('images/gallery/04.jpg', 'Солнечные батареи ФСМ-200П 200 ватт 24В Poly', 'Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+      .col-md-3.col-sm-6
+        +tab-item1('images/gallery/05.jpg', 'Солнечные батареи ФСМ-200М 200 ватт 24В Mono', 'Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+      .col-md-3.col-sm-6
+        +tab-item1('images/gallery/06.jpg', 'Солнечные батареи ФСМ-250П 250 ватт 24В Poly', 'Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
     // .row
   #tab2.tab-pane.fade
     .row.columns_padding_2
       .col-md-3.col-sm-6
-        +tab-item1('images/events/01.jpg', 'Сервис', 'Здесь.')
+        +tab-item1('images/gallery/07.jpg', 'Солнечные батареи ФСМ-250П 250 ватт 24В Poly', 'Lorem ipsum dolor sit amet, consectetur adipisicing elit..')
       .col-md-3.col-sm-6
-        +tab-item1('images/events/01.jpg', 'Сервис', 'Здесь.')
+        +tab-item1('images/gallery/08.jpg', 'Солнечные батареи ФСМ-250П 250 ватт 24В Poly', 'Lorem ipsum dolor sit amet, consectetur adipisicing elit..')
       .col-md-3.col-sm-6
-        +tab-item1('images/events/01.jpg', 'Сервис', 'Здесь.')
+        +tab-item1('images/gallery/09.jpg', 'Солнечные батареи ФСМ-250П 250 ватт 24В Poly', 'Lorem ipsum dolor sit amet, consectetur adipisicing elit..')
       .col-md-3.col-sm-6
-        +tab-item1('images/events/01.jpg', 'Сервис', 'Здесь.')
+        +tab-item1('images/gallery/10.jpg', 'Солнечные батареи ФСМ-250П 250 ватт 24В Poly', 'Lorem ipsum dolor sit amet, consectetur adipisicing elit..')
       .col-md-3.col-sm-6
-        +tab-item1('images/events/01.jpg', 'Сервис', 'Здесь.')
+        +tab-item1('images/gallery/11.jpg', 'Солнечные батареи ФСМ-250П 250 ватт 24В Poly', 'Lorem ipsum dolor sit amet, consectetur adipisicing elit..')
       .col-md-3.col-sm-6
-        +tab-item1('images/events/01.jpg', 'Сервис', 'Здесь.')
+        +tab-item1('images/gallery/12.jpg', 'Солнечные батареи ФСМ-250П 250 ватт 24В Poly', 'Lorem ipsum dolor sit amet, consectetur adipisicing elit..')
   // .row
   #tab3.tab-pane.fade
     .row.columns_padding_2
       .col-md-3.col-sm-6
-        +tab-item1('images/events/01.jpg', 'Сервис', 'Здесь.')
+        +tab-item1('images/gallery/12.jpg', 'Солнечные батареи ФСМ-250П 250 ватт 24В Poly', 'Lorem ipsum dolor sit amet, consectetur adipisicing elit..')
       .col-md-3.col-sm-6
-        +tab-item1('images/events/01.jpg', 'Сервис', 'Здесь.')
+        +tab-item1('images/gallery/02.jpg', 'Солнечные батареи ФСМ-250П 250 ватт 24В Poly', 'Lorem ipsum dolor sit amet, consectetur adipisicing elit..')
 
