--- a/app/styles/includes/grey-section.scss
+++ b/app/styles/includes/grey-section.scss
@@ -11,6 +11,9 @@
   .with_radius {
     border-radius: 18px;
   }
+  .with_margin-top {
+    margin-top: 15px;
+  }
   .form-control {
     border-color: transparent;
     background-color: #ffffff;
