--- a/app/styles/includes/item-meta.scss
+++ b/app/styles/includes/item-meta.scss
@@ -13,6 +13,10 @@
 
 /* item media links */
 
+.wrapper-vertical-item {
+  padding: 10px 15px;
+}
+
 .item-media {
   position: relative;
   overflow: hidden;
