--- a/app/includes/pages/breadcrumbs.jade
+++ b/app/includes/pages/breadcrumbs.jade
@@ -5,6 +5,6 @@ section.page_breadcrumbs.ds.ms.section_padding_bottom_30
         h1.highlight.bold Солнечные панели
         ol.breadcrumb
           li
-            a(href='#') Главная
+            a(href='index.html') Главная
           li.active
             a(href='#') Солнечные панели
