--- a/app/includes/pages/product.jade
+++ b/app/includes/pages/product.jade
@@ -94,31 +94,13 @@ section.ls.ms.section_padding_top_50.section_padding_bottom_50.columns_padding_2
               +news-item('blog-single-right.html', 'images/recent_post2.jpg', 'blog-single-right.html', 'Аккамулятор', '2 800 руб.')
               +news-item('blog-single-right.html', 'images/recent_post1.jpg', 'blog-single-right.html', 'Ветрогенератор', '1 400 руб.')
               +news-item('blog-single-right.html', 'images/recent_post2.jpg', 'blog-single-right.html', 'Контроллер', '5 450 руб.')
-        .with_background.with_padding.with_radius.with_margin-top
-          .widget.widget_slider
-            h3.widget-title Сопутсвующие товары
-            .owl-carousel(data-nav='true', data-loop='true', data-autoplay='true', data-items='1', data-responsive-lg='1', data-responsive-md='1', data-responsive-sm='1', data-responsive-xs='1')
-              .vertical-item
-                .item-media
-                  img(src='images/gallery/01.jpg', alt='')
-                .item-content
-                  h4 Инвертор SUN 1224
-                  p.item-meta.greylinks 15 000 руб.
-              .vertical-item
-                .item-media
-                  img(src='images/gallery/02.jpg', alt='')
-                .item-content
-                  h4 Инвертор SUN 1224
-                  p.item-meta.greylinks 15 000 руб.
-              .vertical-item
-                .item-media
-                  img(src='images/gallery/03.jpg', alt='')
-                .item-content
-                  h4 Инвертор SUN 1224
-                  p.item-meta.greylinks 15 000 руб.
-              .vertical-item
-                .item-media
-                  img(src='images/gallery/04.jpg', alt='')
-                .item-content
-                  h4 Consetetur sadipscing elitr
-                  p.item-meta.greylinks 15 000 руб.
+    .row
+      h1.text-center  Сопутствующие товары
+      .col-md-3
+        +tab-item1('images/gallery/01.jpg', 'Солнечные батареи ФСМ-100М 100 ватт 12В Mono', 'Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+      .col-md-3
+        +tab-item1('images/gallery/02.jpg', 'Солнечные батареи ФСМ-100М 100 ватт 12В Mono', 'Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+      .col-md-3
+        +tab-item1('images/gallery/03.jpg', 'Солнечные батареи ФСМ-100М 100 ватт 12В Mono', 'Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+      .col-md-3
+        +tab-item1('images/gallery/04.jpg', 'Солнечные батареи ФСМ-100М 100 ватт 12В Mono', 'Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
