--- a/app/includes/pages/navigation.jade
+++ b/app/includes/pages/navigation.jade
@@ -29,6 +29,9 @@ header.page_header.header_white.floating_logo.columns_padding_0.table_section
             // section
             li
               a(href='contact.html') Объекты
+            // section
+            li
+              a(href='/shop.html') Магазин
         // eof main nav
         span.toggle_menu
           span
