add box-shadow style add objects gallery init object

--- a/app/includes/mixins/mixins.jade
+++ b/app/includes/mixins/mixins.jade
@@ -45,7 +45,7 @@ mixin default-tab-item(imgSrc, title, text)
 
 mixin tab-item1(imgSrc, title, text)
   .wrapper-vertical-item
-    .vertical-item.post.content-padding.text-center.ls
+    .vertical-item.post.content-padding.text-center.ls.box-shadow
       .item-media
         img(src=imgSrc)
         .media-links
