--- a/app/includes/pages/navigation.jade
+++ b/app/includes/pages/navigation.jade
@@ -16,19 +16,10 @@ header.page_header.header_white.floating_logo.columns_padding_0.table_section
               a(href='index.html') Главная
             // section
             li
-              a(href='blog-right.html') Альтернативная энергия
-            // section
-            li
-              a(href='about.html') Освещение
-            // section
-            li
-              a(href='gallery-regular.html') Акции
-            // section
-            li
               a(href='contact.html') Новости
             // section
             li
-              a(href='contact.html') Объекты
+              a(href='/objects.html') Объекты
             // section
             li
               a(href='/shop.html') Магазин
