--- a/app/styles/includes/item-meta.scss
+++ b/app/styles/includes/item-meta.scss
@@ -17,6 +17,10 @@
   padding: 10px 15px;
 }
 
+.box-shadow {
+  box-shadow: 0 0 15px 5px rgba(0, 0, 0, .2);
+}
+
 .item-media {
   position: relative;
   overflow: hidden;
