edit structure project

--- a/app/includes/common/_navigation.jade
+++ b/app/includes/common/_navigation.jade
@@ -16,7 +16,7 @@ header.page_header.header_white.floating_logo.columns_padding_0.table_section
               a(href='index.html') Главная
             // section
             li
-              a(href='contact.html') Новости
+              a(href='/news.html') Новости
             // section
             li
               a(href='/objects.html') Объекты
