--- a/app/includes/pages/shop/_shop-items.jade
+++ b/app/includes/pages/shop/_shop-items.jade
@@ -1,4 +1,4 @@
-include ../mixins/mixins.jade
+include ../../mixins/mixins
 section.ls.ms.section_padding_top_100.section_padding_bottom_75.columns_padding_25
   .container
     .row
