--- a/app/item.jade
+++ b/app/item.jade
@@ -12,12 +12,12 @@ block content
   #canvas
     #box_wrapper
       // template sections
-      include includes/pages/navigation
-      include includes/pages/breadcrumbs
-      include includes/pages/product
-      include includes/pages/contact-bg-white
-      include includes/pages/callus
-      include includes/pages/copyright
+      include includes/common/_navigation
+      include includes/common/_breadcrumbs
+      include includes/pages/product/_product
+      include includes/common/_contact-bg-white
+      include includes/common/_callus
+      include includes/common/_copyright
     // eof #box_wrapper
   // eof #canvas
   .preloader
