--- a/app/includes/pages/main/_services.jade
+++ b/app/includes/pages/main/_services.jade
@@ -1,4 +1,4 @@
-include ../mixins/mixins.jade
+include ../../mixins/mixins
 section.ls.ms.section_padding_top_50.section_padding_bottom_50
   .container
     .row
@@ -20,11 +20,4 @@ section.ls.ms.section_padding_top_50.section_padding_bottom_50
           +services-item('images/events/08.jpg', '', 'Низковольтное оборудование', 'Перейти')
 
       .col-md-3.col-sm-4
-        .with_background.with_padding.with_radius
-          .widget.widget_popular_entries
-            h3.widget-title Хиты продаж
-            ul.media-list.darklinks
-              +news-item('blog-single-right.html', 'images/recent_post1.jpg', 'blog-single-right.html', 'Солнечная панель', '2 400 руб.')
-              +news-item('blog-single-right.html', 'images/recent_post2.jpg', 'blog-single-right.html', 'Аккамулятор', '2 800 руб.')
-              +news-item('blog-single-right.html', 'images/recent_post1.jpg', 'blog-single-right.html', 'Ветрогенератор', '1 400 руб.')
-              +news-item('blog-single-right.html', 'images/recent_post2.jpg', 'blog-single-right.html', 'Контроллер', '5 450 руб.')
+        include ../../components/_bestsellers
