--- a/app/includes/pages/service_items/_service-items.jade
+++ b/app/includes/pages/service_items/_service-items.jade
@@ -1,4 +1,4 @@
-include ../mixins/mixins.jade
+include ../../mixins/mixins
 section.ls.ms.section_padding_top_65.section_padding_bottom_65
   .container
     .row
