--- a/app/index.jade
+++ b/app/index.jade
@@ -12,13 +12,13 @@ block content
   #canvas
     #box_wrapper
       // template sections
-      include includes/pages/slider
-      include includes/pages/navigation
-      include includes/pages/services
-      include includes/pages/mainGalery
-      include includes/pages/contact
-      include includes/pages/callus
-      include includes/pages/copyright
+      include includes/pages/main/_slider
+      include includes/common/_navigation
+      include includes/pages/main/_services
+      include includes/pages/main/_mainGalery
+      include includes/common/_contact
+      include includes/common/_callus
+      include includes/common/_copyright
     // eof #box_wrapper
   // eof #canvas
   .preloader
