--- a/app/object.jade
+++ b/app/object.jade
@@ -1,3 +1,24 @@
-//
-   Created by vet on 04.06.16.
+extends layouts/default
 
+block content
+  // search modal
+  #search_modal.modal(tabindex='-1', role='dialog', aria-labelledby='search_modal')
+    .widget.widget_search
+      form.searchform.form-inline(method='get', action='/')
+        .form-group
+          input#modal-search-input.form-control(type='text', value='', name='search', placeholder='Search keyword')
+        button.theme_button(type='submit') Search
+  // wrappers for visual page editor and boxed version of template
+  #canvas
+    #box_wrapper
+      // template sections
+      include includes/common/navigation
+      include includes/common/breadcrumbs
+      include includes/pages/
+      include includes/common/contact-bg-white
+      include includes/common/callus
+      include includes/common/copyright
+    // eof #box_wrapper
+  // eof #canvas
+  .preloader
+    .preloader_image
