add page object

--- a/app/includes/mixins/mixins.jade
+++ b/app/includes/mixins/mixins.jade
@@ -52,7 +52,7 @@ mixin tab-item1(imgSrc, title, text)
           a.abs-lin(href='#')
       .item-content
         h3.entry-title
-          a(href='#')=title
+          a(href='item.html')=title
         p=text
         a.item-content_btn(href='item.html') Подробнее
 
