--- a/app/styles/includes/grey-section.scss
+++ b/app/styles/includes/grey-section.scss
@@ -5,6 +5,13 @@
   .greylinks a:hover {
     color: #323232;
   }
+
+  .item-object__carousel {
+    .owl-dots {
+      margin-top: 0;
+    }
+  }
+
   .with_background, hr {
     background-color: #ffffff;
   }
