--- a/app/styles/includes/post-adds.scss
+++ b/app/styles/includes/post-adds.scss
@@ -1,7 +1,7 @@
 /* additional meta at the bottom of entry-title */
 
 .post-adds {
-  margin: 22px 0 33px;
+  margin: 22px 0 0;
   span {
     display: inline-block;
     line-height: 40px;
