--- a/app/includes/components/_bestsellers.jade
+++ b/app/includes/components/_bestsellers.jade
@@ -1,8 +1,8 @@
-.with_background.with_padding.with_radius
+.with_background.with_padding
   .widget.widget_popular_entries
     h3.widget-title Хиты продаж
     ul.media-list.darklinks
-      +news-item('blog-single-right.html', 'images/recent_post1.jpg', 'blog-single-right.html', 'Солнечная панель', '2 400 руб.')
-      +news-item('blog-single-right.html', 'images/recent_post2.jpg', 'blog-single-right.html', 'Аккамулятор', '2 800 руб.')
-      +news-item('blog-single-right.html', 'images/recent_post1.jpg', 'blog-single-right.html', 'Ветрогенератор', '1 400 руб.')
-      +news-item('blog-single-right.html', 'images/recent_post2.jpg', 'blog-single-right.html', 'Контроллер', '5 450 руб.')
+      +news-item('/item.html', 'images/recent_post1.jpg', '/item.html', 'Солнечная панель', '2 400 руб.')
+      +news-item('/item.html', 'images/recent_post2.jpg', '/item.html', 'Аккамулятор', '2 800 руб.')
+      +news-item('/item.html', 'images/recent_post1.jpg', '/item.html', 'Ветрогенератор', '1 400 руб.')
+      +news-item('/item.html', 'images/recent_post2.jpg', '/item.html', 'Контроллер', '5 450 руб.')
