--- a/app/object.jade
+++ b/app/object.jade
@@ -12,11 +12,12 @@ block content
   #canvas
     #box_wrapper
       // template sections
-      include includes/common/navigation
-      include includes/common/breadcrumbs
-      include includes/common/contact-bg-white
-      include includes/common/callus
-      include includes/common/copyright
+      include includes/common/_navigation
+      include includes/common/_breadcrumbs
+      include includes/pages/object/itemObject
+      include includes/common/_contact-bg-white
+      include includes/common/_callus
+      include includes/common/_copyright
     // eof #box_wrapper
   // eof #canvas
   .preloader
