end news init news-item

--- a/app/includes/mixins/mixins.jade
+++ b/app/includes/mixins/mixins.jade
@@ -71,3 +71,23 @@ mixin tab-item2(imgSrc, title, text)
         p=text
         .item-button
           a.theme_button.wide_button.inverse(href='item.html') Подробнее
+
+mixin news(imgSrc, title, text)
+  .side-item.event-item.content-padding.with_background
+    .row
+      .col-md-6
+        .item-media
+          img(src=imgSrc, alt='')
+          .media-links
+      .col-md-6
+        .item-content
+          h3.entry-title.topmargin_0
+            a(href='event-single-right.html')=title
+          a(href='')
+          p.item-meta.greylinks
+            i.rt-icon2-calendar4.highlight
+            | Феварль 12, 2016,
+            i.rt-icon2-location2.highlight
+            | Ленина 56
+          p.text-news
+            a(href='#')=text
