--- a/app/styles/includes/events.scss
+++ b/app/styles/includes/events.scss
@@ -5,6 +5,12 @@
   i {
     padding-right: 5px;
   }
+
+  .text-news {
+    a {
+      color: #9a9a9a;
+    }
+  }
 }
 
 @media (max-width: 991px) {
